--- a/files/en-us/web/html/element/input/radio/index.html
+++ b/files/en-us/web/html/element/input/radio/index.html
@@ -157,34 +157,15 @@ form.addEventListener("submit", function(event) {
 
 <h2 id="Additional_attributes">Additional attributes</h2>
 
-<p>In addition to the common attributes shared by all {{HTMLElement("input")}} elements, <code>radio</code> inputs support the following attributes:</p>
+<p>In addition to the common attributes shared by all {{HTMLElement("input")}} elements, <code>radio</code> inputs support the following attributes.</p>
 
-<table class="standard-table">
- <thead>
-  <tr>
-   <th scope="col">Attribute</th>
-   <th scope="col">Description</th>
-  </tr>
- </thead>
- <tbody>
-  <tr>
-   <td><code><a href="#attr-checked">checked</a></td>
-   <td>A Boolean indicating whether or not this radio button is the default-selected item in the group</td>
-  </tr>
-  <tr>
-   <td><code><a href="#attr-value">value</a></code></td>
-   <td>The string to use as the value of the radio when submitting the form, if the radio is currently toggled on</td>
-  </tr>
- </tbody>
-</table>
-
-<h3 id="attr-checked"><code>checked</code></h3>
+<h3>checked</h3>
 
 <p>A Boolean attribute which, if present, indicates that this radio button is the default selected one in the group.</p>
 
 <p>Unlike other browsers, Firefox by default <a href="https://stackoverflow.com/questions/5985839/bug-with-firefox-disabled-attribute-of-input-not-resetting-when-refreshing">persists the dynamic checked state</a> of an <code>&lt;input&gt;</code> across page loads. Use the {{htmlattrxref("autocomplete","input")}} attribute to control this feature.</p>
 
-<h3 id="attr-value"><code>value</code></h3>
+<h3>value</h3>
 
 <p>The <code>value</code> attribute is one which all {{HTMLElement("input")}}s share; however, it serves a special purpose for inputs of type <code>radio</code>: when a form is submitted, only radio buttons which are currently checked are submitted to the server, and the reported value is the value of the <code>value</code> attribute. If the <code>value</code> is not otherwise specified, it is the string <code>on</code> by default. This is demonstrated in the section {{anch("Value")}} above.</p>
 
