--- a/files/en-us/web/html/element/input/submit/index.html
+++ b/files/en-us/web/html/element/input/submit/index.html
@@ -66,46 +66,15 @@ browser-compat: html.elements.input.input-submit
 
 <h2 id="Additional_attributes">Additional attributes</h2>
 
-<p>In addition to the attributes shared by all {{HTMLElement("input")}} elements, <code>submit</code> button inputs support the following attributes:</p>
+<p>In addition to the attributes shared by all {{HTMLElement("input")}} elements, <code>submit</code> button inputs support the following attributes.</p>
 
-<table class="standard-table">
- <thead>
-  <tr>
-   <th scope="col">Attribute</th>
-   <th scope="col">Description</th>
-  </tr>
- </thead>
- <tbody>
-  <tr>
-   <td><code>{{anch("formaction")}}</code></td>
-   <td>The URL to which to submit the form's data; overrides the form's {{htmlattrxref("action", "form")}} attribute, if any</td>
-  </tr>
-  <tr>
-   <td><code>{{anch("formenctype")}}</code></td>
-   <td>A string specifying the encoding type to use for the form data</td>
-  </tr>
-  <tr>
-   <td><code>{{anch("formmethod")}}</code></td>
-   <td>The HTTP method ({{HTTPMethod("get")}} or {{HTTPMethod("post")}}) to use when submitting the form.</td>
-  </tr>
-  <tr>
-   <td><code>{{anch("formnovalidate")}}</code></td>
-   <td>A Boolean which, if present, means the form's fields will not be subjected to <a href="/en-US/docs/Web/Guide/HTML/Constraint_validation">constraint validation</a> before submitting the data to the server</td>
-  </tr>
-  <tr>
-   <td><code>{{anch("formtarget")}}</code></td>
-   <td>The {{Glossary("browsing context")}} into which to load the response returned by the server after submitting the form</td>
-  </tr>
- </tbody>
-</table>
-
-<h3 id="attr-formaction"><code id="formaction">formaction</code></h3>
+<h3>formaction</h3>
 
 <p>A string indicating the URL to which to submit the data. This takes precedence over the {{htmlattrxref("action", "form")}} attribute on the {{HTMLElement("form")}} element that owns the {{HTMLElement("input")}}.</p>
 
 <p>This attribute is also available on <code><a href="/en-US/docs/Web/HTML/Element/input/image">&lt;input type="image"&gt;</a></code> and {{HTMLElement("button")}} elements.</p>
 
-<h3 id="attr-formenctype"><code id="formenctype">formenctype</code></h3>
+<h3>formenctype</h3>
 
 <p>A string that identifies the encoding method to use when submitting the form data to the server. There are three permitted values:</p>
 
@@ -122,7 +91,7 @@ browser-compat: html.elements.input.input-submit
 
 <p>This attribute is also available on <code><a href="/en-US/docs/Web/HTML/Element/input/image">&lt;input type="image"&gt;</a></code> and {{HTMLElement("button")}} elements.</p>
 
-<h3 id="attr-formmethod"><code id="formmethod">formmethod</code></h3>
+<h3>formmethod</h3>
 
 <p>A string indicating the HTTP method to use when submitting the form's data; this value overrides any {{htmlattrxref("method", "form")}} attribute given on the owning form. Permitted values are:</p>
 
@@ -137,13 +106,13 @@ browser-compat: html.elements.input.input-submit
 
 <p>This attribute is also available on <code><a href="/en-US/docs/Web/HTML/Element/input/image">&lt;input type="image"&gt;</a></code> and {{HTMLElement("button")}} elements.</p>
 
-<h3 id="attr-formnovalidate"><code id="formnovalidate">formnovalidate</code></h3>
+<h3>formnovalidate</h3>
 
 <p>A Boolean attribute which, if present, specifies that the form should not be validated before submission to the server. This overrides the value of the {{htmlattrxref("novalidate", "form")}} attribute on the element's owning form.</p>
 
 <p>This attribute is also available on <code><a href="/en-US/docs/Web/HTML/Element/input/image">&lt;input type="image"&gt;</a></code> and {{HTMLElement("button")}} elements.</p>
 
-<h3 id="attr-formtarget"><code id="formtarget">formtarget</code></h3>
+<h3>formtarget</h3>
 
 <p>A string which specifies a name or keyword that indicates where to display the response received after submitting the form. The string must be the name of a <strong>browsing context</strong> (that is, a tab, window, or {{HTMLElement("iframe")}}. A value specified here overrides any target given by the {{htmlattrxref("target", "form")}} attribute on the {{HTMLElement("form")}} that owns this input.</p>
 
